--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -30,7 +30,7 @@ h2{
     text-align: center;
 }
 body {
-    background-color: #424242;  
+    background-color: #07103A;  
     text-align: center;
 }
 a {
@@ -40,15 +40,56 @@ a {
     font-size: 20px;
 }
 .column {
-    display: inline-block;
+    display: inline-flex;
     padding: 3px;
-    background-color: #525252 ;
+    background-color: #172457 ;
     border-radius: 5px;
 }
 
 .Main-Container{
-    background-color: #646464;
+    background-color: #515E91;
+    text-align: center;
+    margin-left:auto;
+    margin-right:auto;
 }
 .Main-InsideContainer{
-    background-color: #9E9E9E;
+    background-color: #7B84AE;
 }
+.primarybutton {
+    display: inline-block;
+  border-radius: 4px;
+  background-color: #143CB2;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 300px;
+  transition: all 0.4s;
+  cursor: pointer;
+  margin: 5px;
+}
+.primarybutton span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.4s;
+  }
+  
+  .primarybutton span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.4s;
+  }
+  
+  .primarybutton:hover span {
+    padding-right: 25px;
+  }
+  
+  .primarybutton:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
