--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,4 +1,4 @@
-.webgl-content * {border: 0; margin: 0; padding: 0}
+.webgl-content * {border: 0; margin: 0; padding: 3px;}
 .webgl-content {position: flex; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
 
 .webgl-content .logo, .progress {position: flex; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
