reversed last tweak

--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -64,13 +64,8 @@ li a:hover:not(.CurrentPage) {
     background-color: #143CB2;
     color: white;
 }
-.column img {
+.column {
     display: inline-flex;
-    padding: 3px;
-    background-color: #172457 ;
-    border-radius: 5px;
-}
-.column div{
     padding: 3px;
     background-color: #172457 ;
     border-radius: 5px;
