--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -29,7 +29,7 @@ h1{
     font-size:40px;
 }
 body {
-    background-color: #07103A;  
+    background-color: #83B9FF;  
     text-align: center;
     padding-top:2px;
 }
@@ -44,7 +44,7 @@ ul {
     margin: 0;
     padding: 0;
     width: 15%;
-    background-color: #143CB2;
+    background-color: #B28838;
     position: fixed;
     height: 100%;
 }
@@ -56,36 +56,36 @@ li a {
 }
 
 li a.CurrentPage {
-    background-color: #143CB2;
+    background-color: #FFD483;
     color: white;
 }
 
 li a:hover:not(.CurrentPage) {
-    background-color: #143CB2;
+    background-color: #E3AD47;
     color: white;
 }
 .column {
     display: inline-flex;
     padding: 3px;
-    background-color: #172457 ;
+    background-color: #4A77B2 ;
     border-radius: 5px;
 }
 
 .Main-Container{
-    background-color: #515E91;
+    background-color: #9DC7FF;
     text-align: center;
     margin-left:15%;
     padding-top:2px;
     margin-right:auto;   
 }
 .Main-InsideContainer{
-    background-color: #7B84AE;
+    background-color: #7EB2F5;
     padding-bottom:50px;
 }
 .primarybutton {
     display: inline-block;
     border-radius: 4px;
-    background-color: rgb(25, 70, 204);
+    background-color: #BF923C;
     border: none;
     color: #FFFFFF;
     text-align: center;
@@ -124,7 +124,7 @@ li a:hover:not(.CurrentPage) {
 .Currentbutton {
     display: inline-block;
     border-radius: 4px;
-    background-color: rgb(32, 88, 255);
+    background-color: #FFD483;
     border: none;
     color: #FFFFFF;
     text-align: center;
