--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -32,6 +32,8 @@ body {
     background-color: #83B9FF;  
     text-align: center;
     padding-top: 0px;
+    margin-top:0;
+    margin-left:0;
 }
 a {
     margin-left: auto;
@@ -75,7 +77,7 @@ li a:hover:not(.CurrentPage) {
     background-color: #7EB2F5;
     text-align: center;
     margin-left:15%;
-    padding-top:2px;
+    padding-top:1px;
     margin-right:auto;   
 }
 .Main-InsideContainer{
